# nfcore-cmd

./: .gitignore  pyproject.toml  setup.py
nf_core/: __main__.py
nf_core/module-template/modules/: Dockerfile  README.md  main.nf
nf_core/module-template/tests/: main.nf  test.yml
nf_core/modules/: create.py  info.py  module_test.py  module_utils.py  modules_command.py  modules_repo.py  patch.py  test_yml_builder.py
nf_core/modules/lint/: __init__.py  module_tests.py
tests/: test_modules.py
tests/modules/: bump_versions.py  create.py  create_test_yml.py  install.py  modules_json.py  patch.py
