[tool.poetry]
name = "nf-core"                                                                                                                
version = "2.5.1"                                                                                                                      
description = "Forked from nf-core/tools"
authors = ["Yu Hu <huy1@mskcc.org>"]                                                                                               
                                      
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=40.6.0",
    "wheel"
]

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39", "py310"]

[tool.pytest.ini_options]
markers = [
    "datafiles: load datafiles"
]
testpaths = ["tests"]
norecursedirs = [ ".*", "build", "dist", "*.egg", "data", "__pycache__", ".github", "nf_core", "docs"]

[tool.isort]
profile = "black"
known_first_party = ["nf_core"]
multi_line_output = 3
